# huoke-plugin

./: .env.desktop.example  .env.example  .env.local.example  .gitignore  README.md  package.json
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: desktop_static.py  main.py
backend/reports/: comments_douyin_default_7076644919292513569.json  comments_douyin_default_7076644919292513569_20260614_193952.json  comments_douyin_default_7204689485756484919.json  comments_douyin_default_7204689485756484919_20260616_080306.json  comments_douyin_default_7235544165298228495.json  comments_douyin_default_7235544165298228495_20260616_080305.json  comments_douyin_default_7240343811656797443.json  comments_douyin_default_7240343811656797443_20260614_191835.json  comments_douyin_default_7277452246319648054.json  comments_douyin_default_7277452246319648054_20260614_171640.json  comments_douyin_default_7317208427602791730.json  comments_douyin_default_7317208427602791730_20260614_191835.json  comments_douyin_default_7325001837197741362.json  comments_douyin_default_7325001837197741362_20260615_234230.json  comments_douyin_default_7376918037930249526.json  comments_douyin_default_7376918037930249526_20260614_171639.json  comments_douyin_default_7376918037930249526_20260614_212037.json  comments_douyin_default_7376918037930249526_20260615_000439.json  comments_douyin_default_7395476486729387299.json  comments_douyin_default_7395476486729387299_20260614_191835.json  comments_douyin_default_7395476486729387299_20260615_000440.json  (+192 more)
backend/sql/: init.sql
local-service/: Cargo.toml  README.md
(+773 files in other folders)
