[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-hot-monitor"
version = "0.1.0"
description = "Douyin hot topics monitoring and analytics platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0,<3.0",
  "pymysql>=1.1",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3",
  "alembic>=1.13",
  "playwright>=1.54",
  "httpx>=0.27",
  "openai>=1.40",
  "cryptography>=43.0",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

