[package]
name = "huoke-local-service"
version = "0.1.0"
edition = "2021"
description = "Huoke local bridge service for Chrome extension"
default-run = "huoke-local-service"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[[bin]]
name = "mock-extension"
path = "src/bin/mock_extension.rs"
